--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,9 +26,9 @@ http1 = { version = "1", optional = true, package = "http" }
 http0_2 = { version = "0.2", optional = true, package = "http" }
 js-sys = "0.3"
 lazy_static = "1"
-leptos = { git = "https://github.com/leptos-rs/leptos" branch = "2904" }
-leptos_axum = { git = "https://github.com/leptos-rs/leptos" branch = "2904" }
-leptos_actix = { git = "https://github.com/leptos-rs/leptos" branch = "2904" }
+leptos = { git = "https://github.com/leptos-rs/leptos", branch = "2904" }
+leptos_axum = { git = "https://github.com/leptos-rs/leptos", branch = "2904" }
+leptos_actix = { git = "https://github.com/leptos-rs/leptos", branch = "2904" }
 leptos-spin = { version = "0.2", optional = true }
 num = { version = "0.4", optional = true }
 paste = "1"
