--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,7 +47,7 @@ codee = { version = "0.2", features = [
     "prost",
 ] }
 getrandom = { version = "0.2", features = ["js"] }
-leptos_meta = { version = "0.7.0-beta" }
+leptos_meta = { git = "https://github.com/leptos-rs/leptos", branch = "2904" }
 rand = "0.8"
 serde = { version = "1", features = ["derive"] }
 unic-langid = { version = "0.9", features = ["macros"] }
