--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,7 +54,7 @@ unic-langid = { version = "0.9", features = ["macros"] }
 
 [features]
 default = [
-    "use_web_lock",
+    # "use_web_lock",
     "use_window_size",
     "is_err",
     "is_none",
