--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,7 @@ unic-langid = { version = "0.9", optional = true }
 wasm-bindgen = "=0.2.93"
 wasm-bindgen-futures = "0.4"
 web-sys = { version = "=0.3.70", optional = true }
+log = "0.4"
 
 [dev-dependencies]
 codee = { version = "0.2", features = [
